--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
-# Ignore binaries.
-/bin
-
 .idea/
 **/.DS_Store
 docker-compose.yml
-docroot/sites/*/settings.local.php
-docroot/sites/*/services.local.php
+# docroot/sites/*/settings.local.php
+# docroot/sites/*/services.local.yml
 docroot/sites/*/files
 docroot/vendor
 docroot/core
