--- a/docroot/themes/custom/bricksdemotheme/bricksdemotheme.layouts.yml
+++ b/docroot/themes/custom/bricksdemotheme/bricksdemotheme.layouts.yml
@@ -27,6 +27,35 @@ two_column_grid:
       label: Column 11
     col12:
       label: Column 12
+three_column_grid:
+  label: 'Three column grid'
+  category: 'Bricks Demo Layouts'
+  template: templates/layouts/three-column-grid
+  regions:
+    col1:
+      label: Column 1
+    col2:
+      label: Column 2
+    col3:
+      label: Column 3
+    col4:
+      label: Column 4
+    col5:
+      label: Column 5
+    col6:
+      label: Column 6
+    col7:
+      label: Column 7
+    col8:
+      label: Column 8
+    col9:
+      label: Column 9
+    col10:
+      label: Column 10
+    col11:
+      label: Column 11
+    col12:
+      label: Column 12
 four_column_grid:
   label: 'Four column grid'
   category: 'Bricks Demo Layouts'
